Rectification des z-index de toutes les nav et réglage du bug de fermeture du submenu

--- a/client/src/components/NavRoot/NavPC/NavPC.css
+++ b/client/src/components/NavRoot/NavPC/NavPC.css
@@ -43,7 +43,7 @@
     font-size: var(--h1);
     font-family: AnneSignature;
     font-weight: normal;
-    color: var(--ColorPrincipal);
+    color: var(--ColorBlack);
     text-decoration: none;
     width: 295px;
 }
